--- a/_posts/2024-04-16-first.md
+++ b/_posts/2024-04-16-first.md
@@ -5,8 +5,10 @@ categories: coding
 tag: [python, blog, jekyll, github]
 author_profile: false
 toc: true
-sidebar:
-    nav: "docs"
+toc_sticky: true
+toc_label: 목차
+toc_icon: "fas fa-tired"
+author_profile: false
 ---
 
 
