--- a/_posts/2024-04-16-first.md
+++ b/_posts/2024-04-16-first.md
@@ -43,8 +43,11 @@ with smtplib.SMTP(smtp_server, 587) as server:
 
 ## 하위 섹션
 
-
 # 두 번째 섹션
+
+
+
+# ![BrightLuminate (2)](../images/2024-04-16-first/BrightLuminate (2)-3544901.png)
 
 
 
