--- a/_posts/2024-04-16-first.md
+++ b/_posts/2024-04-16-first.md
@@ -47,7 +47,7 @@ with smtplib.SMTP(smtp_server, 587) as server:
 
 
 
-
+![BrightLuminate (2)](../images/2024-04-16-first/BrightLuminate (2)-3545232.png)
 
 
 
