--- a/_posts/2024-04-16-first.md
+++ b/_posts/2024-04-16-first.md
@@ -47,7 +47,7 @@ with smtplib.SMTP(smtp_server, 587) as server:
 
 
 
-![ai-generated-8674235_1280](../images/2024-04-16-first/ai-generated-8674235_1280.png)
+![ai-generated-8674235_1280]({{site.url}}/images/2024-04-16-first/ai-generated-8674235_1280.png)
 
 
 앞으로 더욱더 열심하는 개발자가 되겠습니다.
