--- a/_posts/2024-04-16-first.md
+++ b/_posts/2024-04-16-first.md
@@ -4,6 +4,8 @@ title:  "첫 블로그 입니다. 영광입니다.!"
 categories: coding
 tag: [python, blog, jekyll, github]
 author_profile: false
+redirect_from:
+  - /coding/first-posting
 ---
 
 
@@ -48,6 +50,16 @@ with smtplib.SMTP(smtp_server, 587) as server:
 
 
 ![ai-generated-8674235_1280]({{site.url}}/images/2024-04-16-first/ai-generated-8674235_1280.png)
+
+
+
+
+
+
+
+![airplane-6867678_1280]({{site.url}}/images/2024-04-16-first/airplane-6867678_1280.jpg)
+
+
 
 
 앞으로 더욱더 열심하는 개발자가 되겠습니다.
