--- a/_posts/2024-04-16-first.md
+++ b/_posts/2024-04-16-first.md
@@ -13,8 +13,8 @@ redirect_from:
 {: .notice--danger}
 
 지킬 블로그에 대하여 알아보겠습니다.
-{: .align-right}
-
+{: .align-right}   
+<!-- 오른쪽정렬 -->
 [버튼입니다](https://google.com){: .btn .btn--info}
 
 {% include video id="7b1qBE_Icbw" provider="youtube" %}
@@ -52,7 +52,8 @@ with smtplib.SMTP(smtp_server, 587) as server:
 
 
 
-![ai-generated-8674235_1280]({{site.url}}/images/2024-04-16-first/ai-generated-8674235_1280.png)
+![ai-generated-8674235_1280]({{site.url}}/images/2024-04-16-first/ai-generated-8674235_1280.png){: .
+img-width-half}
 
 
 
@@ -60,7 +61,8 @@ with smtplib.SMTP(smtp_server, 587) as server:
 
 
 
-![airplane-6867678_1280]({{site.url}}/images/2024-04-16-first/airplane-6867678_1280.jpg)
+![airplane-6867678_1280]({{site.url}}/images/2024-04-16-first/airplane-6867678_1280.jpg){: .
+img-width-half}
 
 
 
