--- a/_posts/2024-04-16-first.md
+++ b/_posts/2024-04-16-first.md
@@ -5,6 +5,8 @@ categories: coding
 tag: [python, blog, jekyll, github]
 author_profile: false
 redirect_from:
+sidebar:
+    nav: "counts"
   - /coding/first-posting
 ---
 
