--- a/_posts/2024-04-16-first.md
+++ b/_posts/2024-04-16-first.md
@@ -11,7 +11,7 @@ sidebar:
 
 
 **[공지사항]** [지킬블로그 안내드립니다.](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)
-{: .notice--danger}
+{: .notice--info}
 
 지킬 블로그에 대하여 알아보겠습니다.
 {: .align-right}   
@@ -65,6 +65,6 @@ with smtplib.SMTP(smtp_server, 587) as server:
 ![airplane-6867678_1280]({{site.url}}/images/2024-04-16-first/airplane-6867678_1280.jpg){: .img-width-half .align-center}
 
 
-
-
+<!-- {: .notice--danger} 빨간색  -->
+{: .notice--info} 
 앞으로 더욱더 열심하는 개발자가 되겠습니다.
