--- a/_posts/2024-04-16-first.md
+++ b/_posts/2024-04-16-first.md
@@ -42,6 +42,7 @@ with smtplib.SMTP(smtp_server, 587) as server:
     server.starttls()
     server.login(sender_email, password)
     server.sendmail(sender_email, receiver_email, message.as_string())
+    typora-root-url: ../
 ```
 
 
@@ -57,7 +58,7 @@ with smtplib.SMTP(smtp_server, 587) as server:
 
 
 
-
+![airbus-8607152_1280](../images/2024-04-16-first/airbus-8607152_1280.jpg)
 
 
 
