--- a/_posts/2024-05-01-first.md
+++ b/_posts/2024-05-01-first.md
@@ -7,6 +7,12 @@ author_profile: false
 redirect_from:
 sidebar:
     nav: "counts"
+  toc: true
+      toc_sticky: true
+      toc_label: 목차
+      toc_icon: "fas fa-tired"
+      author_profile: false
+      use_math: true
 
 ---
 
