--- a/_posts/2024-05-14.md
+++ b/_posts/2024-05-14.md
@@ -21,7 +21,7 @@ sidebar:
 
 
 
-## 회귀 개념
+## 회귀 개념대해서 
 
 회귀분석은 변수들 사이의 인관관게를 규명하고자 하는 분석방법이기 때문에 변수의 역할설정이 중요하다. 우리가 신문을 보는 시간은 원인 변수에 
 
@@ -124,6 +124,8 @@ MAE 랑 MSE 같은 뜻을 이해 하면 될 것 같습니다. 둘이  모델이 
 
 
 ![스크린샷 2024-05-14 오후 5.45.38](../images/2024-05-14/스크린샷 2024-05-14 오후 5.45.38.png)
+
+
 
 
 
