--- a/_posts/2024-05-14.md
+++ b/_posts/2024-05-14.md
@@ -1,15 +1,19 @@
 ---
 <!--sass 폴더에서 minimal에 _utilities.scss 파일 ㅇ-->layout: single
-title:  "회귀 개념 과 선형회귀 분석 단순선형 회귀 분석 !"
+title:  "회귀 개념  "
 categories: coding
 tag: [python, blog, jekyll, github]
 author_profile: false
 redirect_from:
-sidebar:
-    nav: "counts"
+# sidebar:
+#     nav: "counts"
+
+
+
+
+
 
 ---
-
 
 **[공지사항]** [지킬블로그 안내드립니다.](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)
 {: .notice--warning}
@@ -21,7 +25,7 @@ sidebar:
 
 
 
-## 회귀 개념대해서 
+## 회귀 개념 대해서 
 
 회귀분석은 변수들 사이의 인관관게를 규명하고자 하는 분석방법이기 때문에 변수의 역할설정이 중요하다. 우리가 신문을 보는 시간은 원인 변수에 
 
