--- a/_posts/2024-05-14-k.md
+++ b/_posts/2024-05-14-k.md
@@ -91,9 +91,7 @@ MAE 랑 MSE 같은 뜻을 이해 하면 될 것 같습니다. 둘이  모델이 
 
 
 
-
-
-## 단순 회귀 
+### 단순 회귀 
 
 단순회귀에서는 독립변수의 수준 x1,x2,x3 ....  등 에서 측정되는 종속변수 y1,y2....등에 대하여 아래의 단순 선형회귀 모형이 성립되었다고 생각하자.
 
@@ -101,7 +99,9 @@ MAE 랑 MSE 같은 뜻을 이해 하면 될 것 같습니다. 둘이  모델이 
 
 
 
-## 단순 회귀는 어떻게 실행하는 것일까? 
+
+
+### 단순 회귀는 어떻게 실행하는 것일까? 
 
 데이터 수집: 먼저 연구나 분석을 위해 필요한 데이터를 수집 하고  데이터를 탐색하여 이상치나 결측치를 처리하고 변수 간의 관계를 이해합니다. 
 
@@ -115,7 +115,9 @@ MAE 랑 MSE 같은 뜻을 이해 하면 될 것 같습니다. 둘이  모델이 
 
 
 
-## 회귀 그래프
+
+
+### 회귀 그래프
 
 회귀를 분석하기 위해서   일반적으로 데이터 포인트와 회귀선(또는 추세선)을 함께 시각화하여 설명변수와 반응변수 간의 관계를 이해하는 데 사용됩니다
 
@@ -128,10 +130,6 @@ MAE 랑 MSE 같은 뜻을 이해 하면 될 것 같습니다. 둘이  모델이 
 - 선형 회귀식 표시: 회귀선 위에 선형 회귀식을 표시하여 모델의 방정식을 나타낼 수 있습니다. 
 
 - 잔차 시각화: 회귀분석에서는 모델의 적합도를 확인하기 위해 잔차를 산점도나 히스토그램으로 시각화하기도 합니다. 
-
-
-
-![스크린샷 2024-05-14 오후 5.45.38]({{site.url}}/images/2024-05-14/스크린샷 2024-05-14 오후 5.45.38.png)
 
 
 
