--- a/_posts/2024-05-14-k.md
+++ b/_posts/2024-05-14-k.md
@@ -131,7 +131,7 @@ MAE 랑 MSE 같은 뜻을 이해 하면 될 것 같습니다. 둘이  모델이 
 
 - 잔차 시각화: 회귀분석에서는 모델의 적합도를 확인하기 위해 잔차를 산점도나 히스토그램으로 시각화하기도 합니다. 
 
-
+![hgr](../images/2024-05-14-k/hgr.png)
 
 
 
