--- a/_posts/2024-05-01-f.md
+++ b/_posts/2024-05-01-f.md
@@ -11,6 +11,9 @@ redirect_from:
 
 
 
+
+
+
 ---
 
 **[공지사항]** [지킬블로그 안내드립니다.](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)
@@ -21,9 +24,11 @@ redirect_from:
 <!-- 오른쪽정렬 -->
 [버튼입니다](https://google.com){: .btn .btn--info}
 
-**2024.04.02** 
 
-**자바의 대해 공부를 배우는 중이여서  콘솔에 대해서 부족한게 많아서 코드를 직접 만들어서 GPT를 통해서 콘솔의 사용자로부터 입력받은 문자열을 파일에 어떻게 되는지 코드를 보면서 얘기하겠습니다.** 
+
+
+
+자바의 대해 공부를 배우는 중이여서  콘솔에 대해서 부족한게 많아서 코드를 직접 만들어서 GPT를 통해서 콘솔의 사용자로부터 입력받은 문자열을 파일에 어떻게 되는지 코드를 보면서 얘기하겠습니다.** 
 
 Java를 사용하여 사용자로부터 콘솔 입력을 받아 파일에 저장하는 프로그램을 만들어보겠습니다. 이 프로그램은 사용자가 콘솔에서 문자열을 입력하고 Enter 키를 누르면 해당 문자열을 "output.txt" 파일에 저장합니다.
 
