--- a/_posts/2024-05-17-o.md
+++ b/_posts/2024-05-17-o.md
@@ -31,3 +31,5 @@ Gini 불순도는 분류 문제에서 의사 결정 나무라는 알고리즘을
 
 ## ![image-20240517115708707](../images/2024-05-17-o/image-20240517115708707.png)
 
+#### 𝑝𝑖*p**i*는 클래스 𝑖*i*의 비율입니다.
+
