--- a/_posts/2024-05-16-L.md
+++ b/_posts/2024-05-16-L.md
@@ -28,7 +28,7 @@ redirect_from:
 
 장점은 모델의 결과를 해석하기 쉽고 계수를 통해 각 변수의 영향을 파악 할 수 있다는 것 입니다. 계수를 통해 각 변수의 영향을 파악 할 수 있다는 것입니다. 또한 효과적으로 기본 모델로 사용 할 수 있지만 선형 결정 경계만으로 학습 할 수 있기 때문에 그렇게 까지 효율 적이지 않습니다.
 
-
+![images]({{ site.baseurl }}/images/2024-05-14-k/images.png)
 
 
 시그모이드 함수는 x 값이 점 점 증가하거나 감소하더라도 y 값이 항상 0 ~ 1 사이 값을 반환 한다는 특성을 가지고 있습니다. S 자형 곡선을 가지고 있습니다.
