--- a/_posts/2024-06-01-a.md
+++ b/_posts/2024-06-01-a.md
@@ -54,9 +54,9 @@ cv2.destroyAllWindows()
 
 ```
 
-![스크린샷 2024-06-04 오전 1.11.02]({{ site.baseurl }}/images/2024-06-01-a/스크린샷 2024-06-04 오전 1.11.02.png)
 
 
+![dog1]({{ site.baseurl }}/images/2024-06-01-a/dog1.png)
 
 1. **이미지 읽기**: 먼저, `cv2.imread()` 함수를 사용하여 두 개의 이미지 파일을 읽어옵니다. 첫 번째 이미지는 강아지를 보여주는 이미지이고, 두 번째 이미지는 강아지를 보여주는 다른 이미지입니다.
 2. **ROI(관심 영역) 설정**: 각 이미지에서 ROI의 위치와 크기를 설정합니다. 이것은 이미지에서 추출하고자 하는 특정 영역을 나타냅니다. 여기서는 첫 번째 이미지의 일부와 두 번째 이미지의 일부를 ROI로 설정합니다.
@@ -117,11 +117,7 @@ plt.show()
 
 ```
 
-![스크린샷 2024-06-04 오전 1.08.14]({{ site.baseurl }}/images/2024-06-01-a/스크린샷 2024-06-04 오전 1.08.42.png)
-
-
-
-
+![dog]({{ site.baseurl }}/images/2024-06-01-a/dog.png)
 
 1. **이미지 읽기**: `cv2.imread()` 함수를 사용하여 두 개의 이미지를 읽어옵니다.
 
