--- a/_posts/2024-06-04-s.md
+++ b/_posts/2024-06-04-s.md
@@ -63,7 +63,9 @@ cv2.destroyAllWindows()
 
 ```
 
-![모자이크]({{ site.baseurl }}/images/2024-06-04-s/모자이크.PNG)
+![mo]({{ site.baseurl }}/images/2024-06-04-s/mo.PNG)
+
+
 
 1. 이미지 파일을 흑백으로 읽어들입니다.
 2. 이미지를 500x500 크기로 리사이즈합니다.
