--- a/_posts/2024-06-04-x.md
+++ b/_posts/2024-06-04-x.md
@@ -1,15 +1,14 @@
----
 layout: single
 title:  "이미지 위 이미지 합성 "
 categories: coding
 tag: [python, blog, jekyll, github]
 author_profile: false
 redirect_from:
+
 # sidebar:
 #     nav: "counts" 
 
 
----
 
 **[공지사항]** [지킬블로그 안내드립니다.](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)
 {: .notice--warning}
@@ -73,7 +72,7 @@ else:
 
 ```
 
-![고양이]({{ site.baseurl }}/images/2024-06-04-x/고양이.PNG)
+![cat]({{ site.baseurl }}/images/2024-06-04-x/cat.PNG)
 
 ## 코드 설명
 
